--- a/src/GitHub.scss
+++ b/src/GitHub.scss
@@ -1,3 +1,4 @@
 @import '_github-markdown.scss';
 @import '_alerts.scss';
+@import '_admonition.scss';
 @import '_pandoc.scss'; 			// pandoc specific CSS
