--- a/src/_github-markdown.scss
+++ b/src/_github-markdown.scss
@@ -10,9 +10,13 @@
   word-wrap: break-word;
   box-sizing: border-box;
   min-width: 200px;
-  max-width: 980px;
+  //max-width: 980px;
   margin: 0 auto;
-  padding: 45px;
+  //padding: 45px;
+  padding-top: 0px;
+  padding-bottom: 45px;
+  padding-left: 45px;
+  padding-right: 45px;
     
   a {
     color: #0366d6;
@@ -449,4 +453,3 @@
     margin-bottom: 0 !important;
   }
 }
-
