--- a/src/_github-markdown.scss
+++ b/src/_github-markdown.scss
@@ -10,14 +10,14 @@
   word-wrap: break-word;
   box-sizing: border-box;
   min-width: 200px;
-  //max-width: 980px;
-  margin: 0 auto;
+  //max-width: 760px;
+  //margin-right: 24px;
   //padding: 45px;
-  padding-top: 0px;
-  padding-bottom: 45px;
-  padding-left: 45px;
-  padding-right: 45px;
-    
+  //padding-top: 0px;
+  //padding-bottom: 45px;
+  //padding-left: 24px;
+  //padding-right: 24px;
+
   a {
     color: #0366d6;
     background-color: transparent;
