--- a/src/github.scss
+++ b/src/github.scss
@@ -1,4 +1,4 @@
 @import '_github-markdown.scss';
 @import '_alerts.scss';
 @import '_admonition.scss';
-@import '_pandoc.scss'; 			// pandoc specific CSS
+@import '_pandoc.scss';
